--- a/spec/fixtures/vcr_cassettes/image_edit_functionality_with_remote_urls_rejects_edits_with_a_url_that_returns_404.yml
+++ b/spec/fixtures/vcr_cassettes/image_edit_functionality_with_remote_urls_rejects_edits_with_a_url_that_returns_404.yml
@@ -7,12 +7,12 @@ http_interactions:
       encoding: US-ASCII
       string: ''
     headers:
+      User-Agent:
+      - Faraday v2.13.4
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
   response:
     status:
       code: 404
@@ -29,34 +29,34 @@ http_interactions:
       Access-Control-Allow-Origin:
       - "*"
       Etag:
-      - W/"64d248ca-24a3"
+      - W/"64c00bd1-24a3"
       Content-Security-Policy:
       - default-src 'none'; style-src 'unsafe-inline'; img-src data:; connect-src
         'self'
       X-Proxy-Cache:
       - MISS
       X-Github-Request-Id:
-      - 5068:1AAE87:105451:107654:680F8733
+      - DCD9:F05D3:CF176A:D400B6:68C256C0
       Accept-Ranges:
       - bytes
       Age:
-      - '1991'
+      - '0'
       Date:
-      - Mon, 28 Apr 2025 14:21:46 GMT
+      - Thu, 11 Sep 2025 04:57:36 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-par-lfpg1960030-PAR
+      - cache-hhr-khhr2060035-HHR
       X-Cache:
-      - HIT
+      - MISS
       X-Cache-Hits:
       - '0'
       X-Timer:
-      - S1745850106.324794,VS0,VE2
+      - S1757566657.693596,VS0,VE102
       Vary:
       - Accept-Encoding
       X-Fastly-Request-Id:
-      - e382a03d9d8e7dc42621eb432dc9b4bce7c9cd4f
+      - 67e567700adcb6bed36e8d5f0b7112cb8f0364a0
     body:
       encoding: ASCII-8BIT
       string: |
@@ -149,5 +149,5 @@ http_interactions:
             </div>
           </body>
         </html>
-  recorded_at: Mon, 28 Apr 2025 14:21:46 GMT
+  recorded_at: Thu, 11 Sep 2025 04:57:36 GMT
 recorded_with: VCR 6.3.1
