--- a/spec/fixtures/vcr_cassettes/chat_error_handling_with_vertexai_gemini-2_5-flash_faraday_version_1_vertexai_gemini-2_5-flash_supports_handling_streaming_error_chunks.yml
+++ b/spec/fixtures/vcr_cassettes/chat_error_handling_with_vertexai_gemini-2_5-flash_faraday_version_1_vertexai_gemini-2_5-flash_supports_handling_streaming_error_chunks.yml
@@ -20,14 +20,14 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Pragma:
-      - no-cache
-      Date:
-      - Mon, 12 Jan 2026 10:43:40 GMT
-      Expires:
-      - Mon, 01 Jan 1990 00:00:00 GMT
       Cache-Control:
       - no-cache, no-store, max-age=0, must-revalidate
+      Date:
+      - Tue, 13 Jan 2026 16:27:08 GMT
+      Expires:
+      - Mon, 01 Jan 1990 00:00:00 GMT
+      Pragma:
+      - no-cache
       Content-Type:
       - application/json; charset=utf-8
       Vary:
@@ -52,9 +52,9 @@ http_interactions:
         {
           "access_token": "<GOOGLE_ACCESS_TOKEN>",
           "expires_in": 3599,
-          "scope": "https://www.googleapis.com/auth/cloud-platform https://www.googleapis.com/auth/sqlservice.login https://www.googleapis.com/auth/userinfo.email openid",
+          "scope": "openid https://www.googleapis.com/auth/sqlservice.login https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/cloud-platform",
           "token_type": "Bearer",
           "id_token": "<GOOGLE_ID_TOKEN>"
         }
-  recorded_at: Mon, 12 Jan 2026 10:43:40 GMT
+  recorded_at: Tue, 13 Jan 2026 16:27:08 GMT
 recorded_with: VCR 6.4.0
