--- a/spec/fixtures/vcr_cassettes/chat_error_handling_with_vertexai_gemini-2_5-flash_faraday_version_2_vertexai_gemini-2_5-flash_supports_handling_streaming_error_chunks.yml
+++ b/spec/fixtures/vcr_cassettes/chat_error_handling_with_vertexai_gemini-2_5-flash_faraday_version_2_vertexai_gemini-2_5-flash_supports_handling_streaming_error_chunks.yml
@@ -20,10 +20,10 @@ http_interactions:
       code: 200
       message: OK
     headers:
-      Date:
-      - Mon, 12 Jan 2026 10:43:42 GMT
       Cache-Control:
       - no-cache, no-store, max-age=0, must-revalidate
+      Date:
+      - Tue, 13 Jan 2026 16:27:10 GMT
       Pragma:
       - no-cache
       Expires:
@@ -52,9 +52,9 @@ http_interactions:
         {
           "access_token": "<GOOGLE_ACCESS_TOKEN>",
           "expires_in": 3599,
-          "scope": "https://www.googleapis.com/auth/sqlservice.login openid https://www.googleapis.com/auth/cloud-platform https://www.googleapis.com/auth/userinfo.email",
+          "scope": "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/cloud-platform openid https://www.googleapis.com/auth/sqlservice.login",
           "token_type": "Bearer",
           "id_token": "<GOOGLE_ID_TOKEN>"
         }
-  recorded_at: Mon, 12 Jan 2026 10:43:42 GMT
+  recorded_at: Tue, 13 Jan 2026 16:27:10 GMT
 recorded_with: VCR 6.4.0
