--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,6 +33,9 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      BUNDLE_PATH: vendor/bundle
+      BUNDLE_DISABLE_SHARED_GEMS: "true"
     strategy:
       matrix:
         ruby-version: ['3.1', '3.2', '3.3', '3.4', '4.0', 'jruby-10.0.2.0']
@@ -111,6 +114,9 @@ jobs:
     needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    env:
+      BUNDLE_PATH: vendor/bundle
+      BUNDLE_DISABLE_SHARED_GEMS: "true"
 
     steps:
     - uses: actions/checkout@v4
